--- a/text_modules.ipynb
+++ b/text_modules.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "Map: 100%|██████████| 60/60 [00:00<00:00, 5868.48 examples/s]\n",
+      "Loading checkpoint shards:  25%|██▌       | 1/4 [00:01<00:05,  1.85s/it]"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from datasets import Dataset, DatasetDict\n",
@@ -60,7 +70,19 @@
     "data_collator = DataCollatorWithPadding(tokenizer)\n",
     "\n",
     "# 选择预训练模型\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"shenzhi-wang/Llama3-8B-Chinese-Chat\").to(device)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"shenzhi-wang/Llama3-8B-Chinese-Chat\").half().to(device)\n",
+    "\n",
+    "# # 设置训练参数\n",
+    "# training_args = TrainingArguments(\n",
+    "#     output_dir=\"./results\",\n",
+    "#     evaluation_strategy=\"epoch\",\n",
+    "#     learning_rate=2e-5,\n",
+    "#     per_device_train_batch_size=4,\n",
+    "#     per_device_eval_batch_size=4,\n",
+    "#     num_train_epochs=3,\n",
+    "#     weight_decay=0.01,\n",
+    "#     save_total_limit=1,\n",
+    "# )\n",
     "\n",
     "# 设置训练参数\n",
     "training_args = TrainingArguments(\n",
@@ -72,6 +94,9 @@
     "    num_train_epochs=3,\n",
     "    weight_decay=0.01,\n",
     "    save_total_limit=1,\n",
+    "    fp16=True,  # 启用半精度训练\n",
+    "    dataloader_num_workers=4,\n",
+    "    deepspeed=\"ds_config.json\",  # 添加DeepSpeed配置文件进行分布式训练\n",
     ")\n",
     "\n",
     "# 定义Trainer\n",
@@ -96,7 +121,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "{\n",
+    "  \"train_batch_size\": 16,\n",
+    "  \"gradient_accumulation_steps\": 4,\n",
+    "  \"fp16\": {\n",
+    "    \"enabled\": true\n",
+    "  },\n",
+    "  \"zero_optimization\": {\n",
+    "    \"stage\": 2,\n",
+    "    \"allgather_partitions\": true,\n",
+    "    \"allgather_bucket_size\": 2e8,\n",
+    "    \"overlap_comm\": true,\n",
+    "    \"reduce_scatter\": true,\n",
+    "    \"reduce_bucket_size\": 2e8,\n",
+    "    \"contiguous_gradients\": true\n",
+    "  },\n",
+    "  \"optimizer\": {\n",
+    "    \"type\": \"AdamW\",\n",
+    "    \"params\": {\n",
+    "      \"lr\": 2e-5,\n",
+    "      \"betas\": [0.8, 0.999],\n",
+    "      \"eps\": 1e-8,\n",
+    "      \"weight_decay\": 3e-7\n",
+    "    }\n",
+    "  },\n",
+    "  \"scheduler\": {\n",
+    "    \"type\": \"WarmupLR\",\n",
+    "    \"params\": {\n",
+    "      \"warmup_min_lr\": 0,\n",
+    "      \"warmup_max_lr\": 2e-5,\n",
+    "      \"warmup_num_steps\": 1000\n",
+    "    }\n",
+    "  }\n",
+    "}\n"
+   ]
   },
   {
    "cell_type": "code",
